# nix-shell-builtin

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  flake.nix  justfile  meson.build  nix.conf  plugin.cc  plugin.nix  release-please-config.json
.github/workflows/: check.yml  release.yml
